--- a/2.html
+++ b/2.html
@@ -3,6 +3,16 @@
 <head>
   <title>세화가 정리한 CSS</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153485200-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-153485200-1');
+</script>
+
 </head>
 
 <body>
